--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 title: MAE JR
-description: A Multi Assessorial Empresarial Júnior é uma associação sem fins lucrativos, com finalidades educacionais na área de Consultoria Empresarial. 
+description: A Multi Assessorial Empresarial Júnior é uma associação sem fins lucrativos, com finalidades educacionais na área de Consultoria Empresarial.
+disable_disk_cache: true
