Teste de tradução em português

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 
-locale: pt
+locale: pt-br
 media_folder: "/assets/imagens/uploads"
 
 collections:
