--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 
-locale: pt-br
+locale: ptbr
 media_folder: "/assets/imagens/uploads"
 
 collections:
