--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,6 +20,7 @@ collections:
   - name: "politicas" # Used in routes, e.g., /admin/collections/blog
     label: "Políticas" # Used in the UI
     folder: "/" # The path to the folder where the documents are stored
+    filter: {field: "layout", value: "politicas"}
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     format: frontmatter
