--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,6 +28,21 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "politicas"}
       - {label: "Título da página", name: "title", widget: "string"}
       - {label: "Texto", name: "body", widget: "markdown"}
+  - name: "paginas" # Used in routes, e.g., /admin/collections/blog
+    label: "Páginas" # Used in the UI
+    folder: "/" # The path to the folder where the documents are stored
+    filter: {field: "layout", value: "default"}
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    format: frontmatter
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
+      - {label: "Título da página", name: "title", widget: "string"}
+      - {label: "Título no banner", name: "bannertitle", widget: "string"}
+      - {label: "Subtítulo", name: "bannersubtitle", widget: "string"}
+      - {label: "Botão (opcional)", name: "buttontext", widget: "string"}
+      - {label: "Imagem de fundo", name: "bannerimage", widget: "image"}
+      - {label: "Texto", name: "body", widget: "markdown"}
 
 editor:
   preview: false
