--- a/admin/config.yml
+++ b/admin/config.yml
@@ -40,7 +40,7 @@ collections:
       - {label: "Título da página", name: "title", widget: "string"}
       - {label: "Título no banner", name: "bannertitle", widget: "string"}
       - {label: "Subtítulo", name: "bannersubtitle", widget: "string"}
-      - {label: "Botão (opcional)", name: "buttontext", widget: "string"}
+      - {label: "Botão (opcional)", name: "buttontext", widget: "string", required: "false"}
       - {label: "Imagem de fundo", name: "bannerimage", widget: "image"}
       - {label: "Texto", name: "body", widget: "markdown"}
 
