--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,7 @@ backend:
 
 locale: pt
 media_folder: "/assets/imagens/uploads"
+local_backend: true
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
@@ -40,7 +41,7 @@ collections:
       - {label: "Título da página", name: "title", widget: "string"}
       - {label: "Título no banner", name: "bannertitle", widget: "string"}
       - {label: "Subtítulo", name: "bannersubtitle", widget: "string"}
-      - {label: "Botão (opcional)", name: "buttontext", widget: "string", required: false}
+      - {label: "Botão", name: "buttontext", widget: "string", required: false}
       - {label: "Imagem de fundo", name: "bannerimage", widget: "image"}
       - {label: "Texto", name: "body", widget: "markdown"}
 
