--- a/admin/config.yml
+++ b/admin/config.yml
@@ -49,6 +49,26 @@ collections:
       - {label: "Link do botão", name: "buttonlink", widget: "string", required: false}
       - {label: "Imagem de fundo", name: "bannerimage", widget: "image"}
       - {label: "Texto", name: "body", widget: "markdown"}
-
+  - label: "Configurações"
+    name: "configuracoes"
+    files:
+      - label: "Menu lateral"
+        name: "menulateral"
+        file: "/_data/menu.yaml"
+        fields:
+          - label: Itens do menu
+            name: itensmenu
+            widget: list
+            allow_add: true
+            collapsed: false
+            fields:
+              - { label: "Título", name: "title", widget: "string" }
+              - { label: "URL", name: "url", widget: "string" }
+      - label: "Nome e descrição"
+        name: "metaconfigs"
+        file: "/_config.yml"
+        fields:
+          - { label: "Nome", name: "title", widget: "string" }
+          - { label: "Descrição", name: "description", widget: "string" }
 editor:
   preview: false
