Update Configurações “menulateral”

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,25 +1,19 @@
----
 nav:
-- title: Home
-  url: /
-
-- title: Sobre
-  url: /#sobre
-
-- title: Serviços
-  url: /#servicos
-
-- title: Consultoria
-  url: /#consultoria
-
-- title: Diretoria
-  url: /#diretoria
-
-- title: Contato
-  url: /#contato
-
-- title: Blog
-  url: blog.html
-
-- title: Processo Seletivo
-  url: selecao.html
+  - title: Home
+    url: /
+  - title: Sobre
+    url: /#sobre
+  - title: Serviços
+    url: /#servicos
+  - title: Consultoria
+    url: /#consultoria
+  - title: Diretoria
+    url: /#diretoria
+  - title: Contato
+    url: /#contato
+  - title: Blog
+    url: blog.html
+  - title: Processo Seletivo
+    url: selecao.html
+  - title: Teste
+    url: /teste.html
