--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,6 +28,7 @@ collections:
     folder: "/"
     filter: {field: "layout", value: "politicas"}
     create: true
+    preview_path: "/{{title}}.html"
     slug: "{{slug}}"
     format: frontmatter
     fields:
@@ -39,6 +40,7 @@ collections:
     folder: "/"
     filter: {field: "layout", value: "default"}
     create: true
+    preview_path: "/{{title}}.html"
     slug: "{{slug}}"
     format: frontmatter
     fields:
